clang/test/BSC/Coroutine/Other/missing-await-expression.cbs
// RUN: %clang_cc1 -verify %s 

#include "../async-func-read-opposite.hbs"

async int f() { // expected-error {{await expression was not found in async function}}    
    return 0;
}

int main() {
  return 0;
}